# lib3mfNodeJSBindings

./: .gitignore  3mf_readwrite.js  CMakeLists.txt  add_triangle.js  beam_lattice.js  binding.gyp  color_cube.js  create_components.js  create_cube.js  extract_info.js  lib3mf.js  lib3mf_nodewrapper.cc  lib3mf_nodewrapper.h  package-lock.json  package.json  python_analyzer.py  readwrite.js  todos.txt
examples/: 3mf_readwrite.js  add_triangle.js  beam_lattice.js  color_cube.js  create_components.js  create_cube.js  extract_info.js
